k8s/qbittorrent/03-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingressroute
  namespace: qbittorrent
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbittorrent.localhost`)
      kind: Rule
      services:
        - name: qbittorrent-service
          port: 8080
